src/snapshots/bear_mcp_server__tests__test_list_notes_01.snap
---
source: src/tests.rs
expression: result
---
[
  {
    "creation_date": "2025-10-18T06:49:23.465508Z",
    "subtitle": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus, felis ac ultrices luctus, leo mauris iaculis erat, ac mollis ante purus nec nibh. Vivamus eget tempor nunc. Duis id convallis",
    "text": "# Test note with multiple tags\n\n#first_tag\n#second_tag\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus, felis ac ultrices luctus, leo mauris iaculis erat, ac mollis ante purus nec nibh. Vivamus eget tempor nunc. Duis id convallis leo. Sed facilisis ornare dapibus. Mauris in tristique urna. Fusce vel diam arcu. \nPellentesque in sodales eros. Pellentesque fermentum ipsum eget elit imperdiet, sed molestie est aliquet. Fusce eget leo consectetur, feugiat magna at, consectetur neque. Nullam suscipit vehicula diam, sed consectetur dui mollis in. Sed eu dolor nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla placerat consequat ex, nec tincidunt elit consectetur ac. Etiam tempus, lectus ac suscipit suscipit, diam ipsum vulputate massa, vel accumsan leo felis in urna. Sed quis ultricies est, eu tempor erat.\n\nPraesent at justo et dui finibus rhoncus ut eleifend orci. Duis ac luctus massa. Sed gravida ante id neque fermentum lacinia et at nisl. Ut eu semper ante, eu commodo turpis. Integer sit amet urna id sem laoreet eleifend sit amet at mi. Nunc rhoncus mauris eros, in vulputate purus eleifend at. Vivamus ac auctor metus, at tempus turpis. Suspendisse eu vulputate risus. Vestibulum egestas, odio mollis sodales fermentum, dui leo eleifend dui, rhoncus ultrices quam felis posuere ex. Quisque fringilla diam pellentesque quam tincidunt scelerisque. Ut porta nibh eu tellus egestas imperdiet. In rhoncus vehicula nulla, aliquam pulvinar augue accumsan eu. Pellentesque sed gravida velit, vitae semper tortor.\nDonec ultrices risus eu augue luctus, id cursus mauris accumsan. Donec tempus mattis ultrices. Nam maximus vel ante sed molestie. Quisque eget libero eu justo venenatis hendrerit. Aenean molestie luctus lorem eu dapibus. Aenean eget laoreet nisi. Quisque semper, tellus ac tincidunt tempus, purus arcu pretium ex, porta malesuada metus neque a est. Suspendisse augue lorem, condimentum sit amet blandit in, sollicitudin sit amet mauris. Proin volutpat nibh orci, nec varius felis semper vel.\n\nMorbi quis velit sit amet arcu euismod lobortis. Sed bibendum leo id facilisis varius. Fusce nec mollis diam. Nullam finibus ut risus non fringilla. In non placerat mi. Duis ornare velit non lobortis vestibulum. Cras orci lacus, auctor et volutpat tempor, dignissim a lectus. Praesent auctor faucibus nisi ut sollicitudin. Vestibulum et est id leo rutrum commodo et vel lectus. Pellentesque vitae finibus neque.\n\nInteger sagittis ligula quis felis imperdiet hendrerit. Sed justo sem, maximus sed nunc in, tristique scelerisque enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam pharetra massa a mi volutpat, a gravida mauris convallis. Aliquam non ullamcorper augue. Cras velit felis, tristique facilisis interdum ac, cursus sed urna. Sed eu lobortis purus. Pellentesque sed odio faucibus, viverra diam eget, porta ligula. Aenean condimentum tempus odio ac pharetra. Sed tempus massa sem, id tristique velit ultricies vitae.\n\nFusce congue condimentum condimentum. Ut quis sapien purus. Duis lacinia semper velit eget placerat. Curabitur sit amet eros tristique, sodales augue id, maximus nunc. Suspendisse aliquet libero turpis, eget ullamcorper odio ultricies et. Proin eleifend imperdiet dolor vitae euismod. Nulla nec velit massa. In ullamcorper urna quis sem maximus pellentesque. Phasellus vel magna eu mauris sollicitudin molestie et eu sem. Nulla dictum, turpis at dignissim vulputate, lectus risus gravida ligula, sit amet maximus neque neque vitae arcu. Donec egestas libero nec mi ultricies, quis ultrices diam faucibus. Morbi consectetur eleifend metus et egestas. Curabitur sed nibh in diam tincidunt cursus.\n",
    "title": "Test note with multiple tags",
    "id": "C94A52FA-6A48-41B4-981E-72B22B077438"
  }
]
